added threaded upload to speed things up